--- a/cp2020/templates/admin/company/show.html.twig
+++ b/cp2020/templates/admin/company/show.html.twig
@@ -2,33 +2,50 @@
 
 {% block title %}Company{% endblock %}
 
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class=" container  d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Просмотр компании</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Модератор</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Просмотр компании</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
-    <h1>Company</h1>
+    <div class="container">
+        <div class="card card-custom p-6 gutter-b">
+            <div class="card-body">
+                <h2 class="text-dark mb-8">{{ company.title }}</h2>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ company.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ company.title }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ company.description }}</td>
-            </tr>
-            <tr>
-                <th>Type</th>
-                <td>{{ company.type }}</td>
-            </tr>
-        </tbody>
-    </table>
+                <h4 class="font-weight-bold text-dark mb-4">Описание компании</h4>
 
-    <a href="{{ path('company_index') }}">back to list</a>
+                <div class="text-dark-50 line-height-lg mb-8">
+                    {{ company.description|default('Нет описания') }}
+                </div>
 
-    <a href="{{ path('company_edit', {'id': company.id}) }}">edit</a>
+                <h4 class="font-weight-bold text-dark mb-4">Дополнительная информация</h4>
 
-    {{ include('admin/company/_delete_form.html.twig') }}
+                <div class="text-dark-50 line-height-lg mb-8">
+                    Company type = {{ company.type }}
+                </div>
+            </div>
+        </div>
+
+        <a href="{{ path('company_index') }}" class="btn btn-success">Назад к списку компаний</a>
+    </div>
 {% endblock %}
