--- a/cp2020/templates/admin/vacancy/index.html.twig
+++ b/cp2020/templates/admin/vacancy/index.html.twig
@@ -23,6 +23,7 @@
         <tbody>
         {% for vacancy in vacancies %}
             <tr>
+                {{ vacancy.company.title }}
                 <td>{{ vacancy.id }}</td>
                 <td>{{ vacancy.title }}</td>
                 <td>{{ vacancy.description }}</td>
